# dml_runner

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md  cmd_lines.txt  example_cmd_lines.txt
kernels/: conv_1x1_nchw_b1_fp16.cpp  gemm_nchw_fp16.cpp  kernel_convolution_nchw_1x1.cpp
libdml/: CMakeLists.txt
libdml/include/: dml_convolution.hpp  dml_types.hpp
libdml/src/: dml_convolution.cpp
libdml/src/impl/convolution/: convolution_impl.h
src/: CMakeLists.txt  conv.cpp  conv.h  dml_base_node.h  dnnl_utils.h  dx12_utils.h  gemm.h  layers_utils.h  main.cpp  mvn.cpp  mvn.h  softmax.cpp  softmax.h
tools/: CMakeLists.txt
tools/ai_driver/: CMakeLists.txt
tools/ai_driver/include/: ai_driver.h  ai_driver.hpp  ai_driver_export.h  ai_driver_model.h  ai_driver_model.hpp  ai_driver_operators.h  ai_driver_operators.hpp  ai_driver_tensor.h  ai_driver_tensor.hpp
tools/ai_driver/src/: ai_driver.cpp  ai_driver_model.cpp  ai_driver_operators.cpp
tools/ai_driver/src/impl/: gpu_context.cpp  gpu_context.h  gpu_visitor.h  model.cpp  model.h  node.cpp  node.h
tools/ai_driver/src/impl/nodes/: activation.cpp  activation.h  constant_port.cpp  constant_port.h  convolution.cpp  convolution.h  elementwise.cpp  elementwise.h  matmul.cpp  matmul.h  port.cpp  port.h
tools/ai_driver_tests/: CMakeLists.txt  test_dx12_context.cpp  test_dx12_context.h  test_ocl_context.h  utils.h
tools/ai_driver_tests/test_cases/: test_api.cpp  test_model.cpp  test_operators.cpp
tools/common_lib/: CMakeLists.txt
tools/common_lib/src/: conformance_check_helper.h  conv.cpp  conv.h  dml_base_node.h  dnnl_utils.h  dx12_utils.h  gemm.cpp  gemm.h  iumd_d3d12_impl.cpp  iumd_d3d12_impl.h  layers_utils.h  memory_bandwidth.h  mha.h  mvn.h  node_dispatcher.h  softmax.h  tensor_shape.h
tools/cross_runner/: CMakeLists.txt  example_cmd_lines.txt
tools/cross_runner/kernels/: Reorder_weights_cm.cl  conv_1x1_nchw_b1_fp16.cpp  conv_nchw_dpas_fp16.cpp  conv_nchw_fp16.cpp  gemm_nchw_fp16.cpp  gemm_nchw_fp16_stateless.cpp  memory_copy.cpp  memory_copy_stateless.cpp  mha_qk_and_sv_q_kv_gemm_fp16.cpp  mha_qk_q_kv_gemm_fp16.cpp  mha_qk_qkv_gemm_dpas.cpp  mha_qk_qkv_gemm_fp16.cpp  mha_qkv_gemm_dpas16.cpp  mha_sv_s_kv_gemm_fp16.cpp  mha_sv_s_qkv_gemm_fp16.cpp  mvn_nchw.cpp  reorder_weights.cpp  softmax_nchw.cpp
tools/cross_runner/src/: conv.cpp  conv.h  dml_base_node.h  dnnl_utils.h  dx12_utils.h  gemm.cpp  gemm.h  iumd_d3d12_impl.cpp  iumd_d3d12_impl.h  layers_utils.h  main.cpp  memory_bandwidth.h  mha.h  mvn.cpp  mvn.h  softmax.cpp  softmax.h
tools/inference_engine/: CMakeLists.txt
tools/inference_engine/include/: inference_engine.h  inference_engine.hpp  inference_engine_error.h  inference_engine_export.h  inference_engine_model.h  inference_engine_model.hpp  inference_engine_operators.h  inference_engine_operators.hpp  inference_engine_tensor.h  inference_engine_tensor.hpp
tools/inference_engine/src/: inference_engine.cpp  inference_engine_model.cpp  inference_engine_operators.cpp
tools/inference_engine/src/impl/: context.h  error.cpp  error.h  gpu_context.cpp  gpu_context.h  gpu_visitor.h  model.cpp  model.h  node.cpp  node.h  tensor.h
tools/inference_engine/src/impl/nodes/: activation.cpp  activation.h  convolution.cpp  convolution.h  elementwise.cpp  elementwise.h  elementwise_add.cpp  elementwise_add.h  matmul.cpp  matmul.h  port.cpp  port.h
tools/inference_engine_tests/: CMakeLists.txt  test_d3d12_context.cpp  test_d3d12_context.h  test_dx12_context.h  test_gpu_context.cpp  test_gpu_context.h  test_ocl_context.h  utils.h
tools/inference_engine_tests/test_cases/: test_api.cpp  test_model.cpp  test_operators.cpp
tools/tests/: .gitattributes  .gitignore  CMakeLists.txt  config.h  main.cpp
tools/tests/test_cases/: test_api.cpp  test_conv.cpp  test_conv_base.h  test_conv_parametrized.cpp  test_gemm.cpp  test_gemm_base.h  test_gemm_parametrized.cpp  utils.h
